--- a/.github/workflows/update-property-data.yml
+++ b/.github/workflows/update-property-data.yml
@@ -36,17 +36,43 @@ jobs:
           cat > replace_all_properties.js << 'EOF'
           const fs = require('fs');
           
-          // Get all property arrays from GitHub payload
-          const propIds = process.env.PROP_IDS ? JSON.parse(process.env.PROP_IDS) : [];
-          const addresses = process.env.ADDRESSES ? JSON.parse(process.env.ADDRESSES) : [];
-          const lockboxStatuses = process.env.LOCKBOX_STATUSES ? JSON.parse(process.env.LOCKBOX_STATUSES) : [];
-          const bannerStatuses = process.env.BANNER_STATUSES ? JSON.parse(process.env.BANNER_STATUSES) : [];
-          const photosStatuses = process.env.PHOTOS_STATUSES ? JSON.parse(process.env.PHOTOS_STATUSES) : [];
-          const eyesOnProp = process.env.EYES_ON_PROP ? JSON.parse(process.env.EYES_ON_PROP) : [];
-          const pickupDates = process.env.PICKUP_DATES ? JSON.parse(process.env.PICKUP_DATES) : [];
-          const recordIds = process.env.RECORD_IDS ? JSON.parse(process.env.RECORD_IDS) : [];
+          // Helper function to parse comma-separated strings into arrays
+          function parseToArray(envVar) {
+            if (!envVar) return [];
+            
+            try {
+              // First try to parse as JSON (in case it's already an array)
+              const parsed = JSON.parse(envVar);
+              if (Array.isArray(parsed)) {
+                return parsed;
+              }
+              // If it's a string, split by commas, trim whitespace, and filter out empty values
+              return String(parsed)
+                .split(',')
+                .map(item => item.trim())
+                .filter(item => item !== ''); // This removes empty strings from consecutive commas
+            } catch (error) {
+              // If JSON.parse fails, treat as comma-separated string
+              return String(envVar)
+                .split(',')
+                .map(item => item.trim())
+                .filter(item => item !== ''); // This removes empty strings from consecutive commas
+            }
+          }
+          
+          // Parse all property arrays from GitHub payload
+          const propIds = parseToArray(process.env.PROP_IDS);
+          const addresses = parseToArray(process.env.ADDRESSES);
+          const lockboxStatuses = parseToArray(process.env.LOCKBOX_STATUSES);
+          const bannerStatuses = parseToArray(process.env.BANNER_STATUSES);
+          const photosStatuses = parseToArray(process.env.PHOTOS_STATUSES);
+          const eyesOnProp = parseToArray(process.env.EYES_ON_PROP);
+          const pickupDates = parseToArray(process.env.PICKUP_DATES);
+          const recordIds = parseToArray(process.env.RECORD_IDS);
           
           console.log(`Processing ${propIds.length} properties from complete dataset`);
+          console.log(`Raw PROP_IDS: ${process.env.PROP_IDS}`);
+          console.log(`Parsed Property IDs: [${propIds.join(', ')}]`);
           
           // Build complete property array
           const properties = [];
@@ -86,7 +112,7 @@ jobs:
           
           console.log(`✅ COMPLETE DATASET REPLACED`);
           console.log(`Total properties: ${properties.length}`);
-          console.log(`Property IDs: ${propIds.join(', ')}`);
+          console.log(`First few property IDs: ${propIds.slice(0, 3).join(', ')}${propIds.length > 3 ? '...' : ''}`);
           console.log(`Sync completed at: ${completeData.last_updated}`);
           EOF
           
